Few more style changes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
     <img src="img/carmel.jpg" alt="Beautiful picture of the coast at Carmel">
     <img src="img/Chezshea.jpg" alt="Half Moon Bay Chez Shea lobby!">
 
-    <p></p>
+    <p>You're a caregiver! You do whatever you can to help others. You go out of your way to do something for someone else.
+        Even when you're down yourself. You are such an amazing person and I'm so happy to call you my Mom! Thank you for everything!
+    </p>
+
+    <p id="george">
+        You're also a proud pet mom of a very adorable dog
+        
+        <img src="img/goldendoodle.jpg" alt="Adorable dog, almost as cute as your own.">
+        
+        <ul>
+            <li>You do so many amazing things for others, and don't let anyone else tell you otherwise.</li>
+            <li>You don't take crap from anyone, and you know your own worth.</li>
+            <li>Even through <strong>a very <i>fun </i>divorce </strong> you still stand your ground, and taught both your daughters it's ok to get 
+            out of a bad relationship, no matter what ties you have to them.</li>
+        </ul>
+
+        You are such a strong woman, and such a wonderful role model for your daughters. You've helped me through so much
+        and because of that you are one of the people in my life that I trust the most.
+    </p>
+
+    <p id="five">You've taught me so much, and you continue to teach, and help me day by day. You don't give up on me 
+        even when I get testy. You are one of the most amazing people in my life. And for that I'll never be able to thank you enough!
+    </p>
+
+    <h2>To the best Mom I could ever have. Thank you from the bottom of my heart!</h2>
 </body>
 </html>
