--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ol>
     </div>
 
-    <p>
+    <p id="water">
         The way you light up when you see water. Our trips to half moon bay, and Carmel By The Sea, <strong>you become another person!</strong>
     </p>
     <img src="img/carmel.jpg" alt="Beautiful picture of the coast at Carmel">
