--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
     <p id="george">
         You're also a proud pet mom of a very adorable dog
         
-        
         <ul>
             <li>You do so many amazing things for others, and don't let anyone else tell you otherwise.</li>
             <li>You don't take crap from anyone, and you know your own worth.</li>
-            <li>Even through <strong>a very <i>fun </i>divorce </strong> you still stand your ground, and taught both your daughters it's ok to get 
+            <li>Even through <strong>a very <i>"fun" </i>divorce </strong> you still stand your ground, and taught both your daughters it's ok to get 
             out of a bad relationship, no matter what ties you have to them.</li>
         </ul>
 
